Replaced Jodatime with java.time.Instant