@@ -30,8 +30,8 @@ import java.io.Writer;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
+import java.time.Instant;
 import java.util.Collection;
-import java.util.Date;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.Iterator;
@@ -41,8 +41,6 @@ import java.util.ResourceBundle;
 import java.util.Set;
 
 import org.joda.time.DateTime;
-
-import com.digitald4.common.util.FormatText;
 
 /**
  * A JSONObject is an unordered collection of name/value pairs. Its external
@@ -1082,7 +1080,7 @@ public class JSONObject {
    * @throws JSONException If the key is null or if the number is invalid.
    */
   public JSONObject put(String key, double value) throws JSONException {
-    this.put(key, new Double(value));
+    this.put(key, Double.valueOf(value));
     return this;
   }
 
@@ -1096,7 +1094,7 @@ public class JSONObject {
    * @throws JSONException If the key is null.
    */
   public JSONObject put(String key, int value) throws JSONException {
-    this.put(key, new Integer(value));
+    this.put(key, Integer.valueOf(value));
     return this;
   }
 
@@ -1110,7 +1108,7 @@ public class JSONObject {
    * @throws JSONException If the key is null.
    */
   public JSONObject put(String key, long value) throws JSONException {
-    this.put(key, new Long(value));
+    this.put(key, Long.valueOf(value));
     return this;
   }
 
@@ -1158,7 +1156,9 @@ public class JSONObject {
       } else {
         key = pooled;
       }
-      if (value instanceof DateTime) {
+      if (value instanceof Instant) {
+        map.put(key, ((Instant) value).toEpochMilli());
+      } else if (value instanceof DateTime) {
         map.put(key, ((DateTime) value).getMillis());
       } else {
         map.put(key, value);
@@ -1341,9 +1341,9 @@ public class JSONObject {
             return d;
           }
         } else {
-          Long myLong = new Long(string);
+          Long myLong = Long.valueOf(string);
           if (myLong.longValue() == myLong.intValue()) {
-            return new Integer(myLong.intValue());
+            return Integer.valueOf(myLong.intValue());
           }
           return myLong;
         }
@@ -1511,6 +1511,9 @@ public class JSONObject {
     try {
       if (object == null) {
         return NULL;
+      }
+      if (object instanceof Instant) {
+        return ((Instant) object).toEpochMilli();
       }
       if (object instanceof DateTime) {
         return ((DateTime) object).getMillis();
